# RAZOR-Develop

./: CMakeLists.txt  README.md  config_template.cfg
archive/: hdf5-test.cpp  read_data.cpp  read_data.hpp
cmake/: CMakeLists.txt
include/: Eigen3Targets.cmake  acquire_training_set.hpp  base_surrogate.h  extract_modes.hold  low_dimensional_model.hpp  low_dimensional_solution.hold  low_dimensional_solution.hpp  modal_identification.hpp  preprocessing.hpp  rbf.h  read_data.hpp  write_data.hpp
libraries/: acquire_training_set.cpp  base_surrogate.cpp  extract_modes.hold  low_dimensional_model.cpp  low_dimensional_solution.cpp  low_dimensional_solution.hold  modal_identification.cpp  preprocessing.cpp  rbf.cpp  read_data.cpp  write_data.cpp
python/: plot-utils.py
src/: CMakeLists.txt  main.cpp  razor.SAVED  razor.cpp
tutorial/: README
tutorial/airfoil-unsteady/: airfoil.h5  airfoil.su2  cube.su2  filename1.h5  list-error-points.csv  list-snapshots.csv  razor  snap-001.csv  snap-002.csv  snap-003.csv  test.hdf5  unsteady-airfoil.cfg
